--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,12 +3,12 @@ sonar.organization=serges147
 
 
 # This is the name and version displayed in the SonarCloud UI.
-#sonar.projectName=try_sonarqube
-#sonar.projectVersion=1.0
+sonar.projectName=try_sonarqube
+sonar.projectVersion=1.0
 
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-#sonar.sources=src
+sonar.sources=src
 
 # Encoding of the source code. Default is default system encoding
-#sonar.sourceEncoding=UTF-8
+sonar.sourceEncoding=UTF-8
